[package]
name = "one-slot-eff"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["rust-zstd", "smash-runtime"] }
smash = { git = "https://github.com/blu-dev/smash-rs" }
binrw = "0.8.4"
once_cell = "1.12.0"
parking_lot = "0.12.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
