[package]
name = "one-slot-eff"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["rust-zstd", "smash-runtime"] }
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }
smashline = { git = "https://github.com/blu-dev/smashline", branch = "development" }
smash = { package = "skyline_smash", git = "https://github.com/blu-dev/skyline-smash"}
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }

binrw = "0.13.0"
nutexb = "0.7.0"
once_cell = "1.12.0"
parking_lot = "0.12.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
